--- a/public_html/static/styles-sass/base-styles.scss
+++ b/public_html/static/styles-sass/base-styles.scss
@@ -110,10 +110,11 @@ header.with-bottom-border {
   @include center();
   justify-content: space-between;
   margin: 0 $default-side-spacing * 3;
+  height: $header-height;
   @media screen and (width < 1000px) {
     margin: 0 calc($default-side-spacing / 2);
+    height: calc($header-height / 1.5);
   }
-  height: $header-height;
 }
 
 .logo {
@@ -126,18 +127,6 @@ header.with-bottom-border {
 
 .nav-link-active {
   opacity: 90%;
-  position: relative;
-  display: inline-block;
-
-  &::after {
-    content: '';
-    position: absolute;
-    width: 100%;
-    height: 1px;
-    background-color: black;
-    bottom: -1px;
-    left: 0;
-  }
 }
 
 nav {
@@ -146,7 +135,7 @@ nav {
     display: flex;
   }
   li {
-    margin-left: 4rem;
+    margin-left: 2.5rem;
     a {
       opacity: 50%;
       transition: opacity 0.5s ease;
@@ -172,6 +161,10 @@ nav {
   transition: all 0.5s ease-out;
   border-top: $default-line-color solid 1px;
   opacity: 0;
+
+  @media screen and (width < 1000px) {
+    top: calc($header-height / 1.5);
+  }
 
   @media screen and (width > 1200px) {
     display: none;
@@ -234,6 +227,9 @@ main {
   display: flex;
   justify-content: center;
   margin-top: $header-height;
+  @media screen and (width < 1000px) {
+    margin-top: calc($header-height / 1.5);
+  }
 }
 
 footer {
